# Laberit-intelligence

./: .claude-config.json  .env.azure.example  .env.development  .env.development.example  .env.example  .env.production  .env.production.example  .gitignore  ARCHITECTURE-DECISION.md  ARCHITECTURE.md  Assessments_Raw.xlsx  CHANGELOG.md  CLAUDE.md  CLAUDE_PROJECT_SETUP.md  CLEANUP_SUMMARY.md  CLOUDFLARE_SETUP.md  CONTRIBUTING.md  DATABASE-MIGRATION-SUMMARY.md  DEPLOYMENT.md  DEVELOPMENT_CHECKPOINT.md  DII-VISUALIZATION-INTEGRATION.md  INTELLIGENCE_APP_WORKFLOW.md  LICENSE  MIGRATION-STRATEGY.md  MONOREPO-ACTIVATION-STATUS.md  MONOREPO-SETUP.md  MONOREPO.md  PLATFORM_ROADMAP.md  README.md  SECURITY.md  SETUP_GITHUB_PAGES.md  all-visualizations-test.html  analyze_masterdatabase_simple.py  apps-redirect.html  arc-coordinate-test.html  arc-final-position.html  arc-foundation-fixed-test.html  arc-foundation-test.html  arc-gauge-final-test.html  arc-gauge-rotation-test.html  (+55 more)
.github/: CODEOWNERS  dependabot.yml
context/: BUSINESS_LOGIC.md  CURRENT_STATE.md  DAILY_LOG.md  README.md
dashboards/: immunity-MVP-CLH.html
data/: DII_Migration_Report.md  DII_V4_Mapping_Matrix.md  DII_V4_PRODUCTION_FILES.md  MasterDatabaseV3.1.xlsx  MasterDatabaseV3.1_Analysis.md  MasterDatabaseV3.1_Summary.md  aer-enhancement-summary.md  assessments_raw_anonymized.xlsx  assessments_raw_anonymized_summary.json  business-model-scenarios.json  classification_validation_report.csv  dii_v4_benchmarks.json  dii_v4_distribution.json  dii_v4_historical_data.json  generate_dii_v4_data.py  index.json  (+10 more)
(+493 files in other folders)
