[tool.poetry]
name = "laberit-intelligence"
version = "4.1.1"
description = "Digital Immunity Index (DII) 4.0 - Cybersecurity Intelligence Platform"
authors = ["Lãberit Intelligence"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Percevals/Laberit-intelligence"
repository = "https://github.com/Percevals/Laberit-intelligence"
keywords = ["cybersecurity", "DII", "digital-immunity", "risk-assessment", "intelligence"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.0"
openpyxl = "^3.1.0"
requests = "^2.31.0"
jinja2 = "^3.1.0"
numpy = "^1.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
pre-commit = "^3.0.0"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | quick-assessment
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"